--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </header>
 
     <div class="side-menu">
+        <a href="javascript:void(0)" class="close-btn">&times;</a>
         <a href="tel:+917708957128"><span><img src="images/icons/apps.png" alt="call" width="18px"></span> Call Us</a>
         <a href="mailto:info@saicabs.com"><span><img src="images/icons/coment.png" alt="call" width="18px"></span> Email Us</a>
         <a href="https://wa.me/917708957128"><span><img src="images/icons/whatsapp.png" alt="call" width="18px"></span> WhatsApp</a>
