--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <p>Affordable Tours • Clean Cars • Experienced Drivers</p>
                 <div class="cta-buttons">
                     <a href="tel:+917708957128" class="cta-button">Call Now</a>
-                    <a href="https://wa.me/917708957128" class="cta-button">Book on WhatsApp</a>
+                    <a href="https://wa.me/917708957128" class="cta-button">WhatsApp</a>
                 </div>
             </div>
         </section>
