--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Sai Cabs Tours & Travels</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/animation.css">
      <!-- Favicon Icon -->
     <link rel="icon" href="images/favicon.ico">
 </head>
@@ -40,7 +41,7 @@
                 <p>Affordable Tours • Clean Cars • Experienced Drivers</p>
                 <div class="cta-buttons">
                     <a href="tel:+917708957128" class="cta-button">Call Now</a>
-                    <a href="https://wa.me/917708957128" class="cta-button">WhatsApp</a>
+                    <a href="https://wa.me/917708957128" class="cta-button whatsapp-button">WhatsApp</a>
                 </div>
             </div>
         </section>
