--- a/index.html
+++ b/index.html
@@ -86,6 +86,20 @@
                     <p class="price">Custom itinerary available</p>
                     <a href="tel:+9177089 57128" class="book-now">Book Now</a>
                 </div>
+                <div class="card">
+                    <img src="images/tour14.jpg" alt="OOTY">
+                    <h3>OOTY</h3>
+                    <p>Pickup: Rameswaram</p>
+                    <p class="price">Custom itinerary available</p>
+                    <a href="tel:+917708957128" class="book-now">Book Now</a>
+                </div>
+                <div class="card">
+                    <img src="images/tour15.jpeg" alt="Kodaikanal">
+                    <h3>Kodaikanal</h3>
+                    <p>Pickup: Rameswaram</p>
+                    <p class="price">Custom itinerary available</p>
+                    <a href="tel:+917708957128" class="book-now">Book Now</a>
+                </div>
             </div>
         </section>
 
@@ -95,6 +109,7 @@
                 <div class="vehicle-item"><img src="images/car3.png" alt="Mini"><h3>Mini</h3></div>
                 <div class="vehicle-item"><img src="images/car1.png" alt="Sedan"><h3>Sedan</h3></div>
                 <div class="vehicle-item"><img src="images/car2.png" alt="SUV"><h3>SUV</h3></div>
+                <div class="vehicle-item"><img src="images/car4.png" alt="Tempo Traveller"><h3>Tempo Traveller</h3></div>
             </div>
         </section>
 
