--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/company-logo.png" alt="Sai Cabs Logo" width="160px">
+            <img src="images/company-logo.png" alt="Sai Cabs Logo" width="160">
         </div>
         <nav class="main-nav">
-            <a href="tel:+917708957128" class="phone"><span><img src="images/icons/apps.png" alt="call" width="18px"></span> +91 77089 57128</a>
-            <a href="mailto:info@saicabs.com" class="email"><span><img src="images/icons/coment.png" alt="call" width="18px"></span> info@saicabs.com</a>
-            <a href="https://wa.me/917708957128" class="whatsapp"><span><img src="images/icons/whatsapp.png" alt="call" width="18px"></span> WhatsApp</a>
+            <a href="tel:+917708957128" class="phone"><span><img src="images/icons/apps.png" alt="call" width="18"></span> +91 77089 57128</a>
+            <a href="mailto:info@saicabs.com" class="email"><span><img src="images/icons/coment.png" alt="call" width="18"></span> info@saicabs.com</a>
+            <a href="https://wa.me/917708957128" class="whatsapp"><span><img src="images/icons/whatsapp.png" alt="call" width="18"></span> WhatsApp</a>
         </nav>
         <div class="hamburger">&#9776;</div>
     </header>
 
     <div class="side-menu">
         <a href="javascript:void(0)" class="close-btn">&times;</a>
-        <a href="tel:+917708957128"><span><img src="images/icons/apps.png" alt="call" width="18px"></span> Call Us</a>
-        <a href="mailto:info@saicabs.com"><span><img src="images/icons/coment.png" alt="call" width="18px"></span> Email Us</a>
-        <a href="https://wa.me/917708957128"><span><img src="images/icons/whatsapp.png" alt="call" width="18px"></span> WhatsApp</a>
+        <a href="tel:+917708957128"><span><img src="images/icons/apps.png" alt="call" width="18"></span> Call Us</a>
+        <a href="mailto:info@saicabs.com"><span><img src="images/icons/coment.png" alt="call" width="18"></span> Email Us</a>
+        <a href="https://wa.me/917708957128"><span><img src="images/icons/whatsapp.png" alt="call" width="18"></span> WhatsApp</a>
     </div>
 
     <main>
@@ -73,7 +73,7 @@
                     <a href="tel:+917708957128" class="book-now">Book Now</a>
                 </div>
                 <div class="card">
-                    <img src="images/tour7.jpg">
+                    <img src="images/tour7.jpg" alt="Madurai – Rameswaram – Kanyakumari">
                     <h3>Madurai – Rameswaram – Kanyakumari (3N / 4D)</h3>
                     <p>Custom itinerary available</p>
                     <p class="price">Custom itinerary available</p>
@@ -84,7 +84,7 @@
                     <h3>Rameswaram – Kanyakumari – Trivandrum (2N)</h3>
                     <p>Ideal for temple & coastal trip</p>
                     <p class="price">Custom itinerary available</p>
-                    <a href="tel:+9177089 57128" class="book-now">Book Now</a>
+                    <a href="tel:+917708957128" class="book-now">Book Now</a>
                 </div>
                 <div class="card">
                     <img src="images/tour14.jpg" alt="OOTY">
@@ -161,7 +161,7 @@
     <footer>
         <div class="footer-content">
             <div class="logo">
-                <img src="images/company-logo.png" alt="Sai Cabs Logo" width="160px">
+                <img src="images/company-logo.png" alt="Sai Cabs Logo" width="160">
             </div>
             <div class="contact-info">
                 <p>27, old police line, Rameswaram, Tamil Nadu 623526</p>
