--- a/index.html
+++ b/index.html
@@ -12,6 +12,32 @@
     <link rel="stylesheet" href="css/style.css">
      <!-- Favicon Icon -->
     <link rel="icon" href="images/favicon.ico">
+    <link rel="canonical" href="https://www.saicabs.com/">
+    <meta property="og:title" content="Sai Cabs Tours & Travels | Rameswaram Taxi Service">
+    <meta property="og:description" content="Trusted taxi services in Rameswaram, Madurai, and Kanyakumari. Book temple tours, sightseeing packages, and more.">
+    <meta property="og:image" content="https://www.saicabs.com/images/hero.jpg">
+    <meta property="og:url" content="https://www.saicabs.com/">
+    <meta property="og:type" content="website">
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Sai Cabs Tours & Travels",
+      "image": "https://www.saicabs.com/images/company-logo.png",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "27, old police line",
+        "addressLocality": "Rameswaram",
+        "addressRegion": "Tamil Nadu",
+        "postalCode": "623526",
+        "addressCountry": "IN"
+      },
+      "telephone": "+917708957128",
+      "email": "info@saicabs.com",
+      "url": "https://www.saicabs.com/"
+    }
+    </script>
 </head>
 <body>
     <header>
@@ -168,10 +194,10 @@
                 <p><a href="tel:+917708957128">+91 77089 57128</a></p>
                 <p><a href="mailto:info@saicabs.com">info@saicabs.com</a></p>
             </div>
-            <!-- <div class="social-icons">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-            </div> -->
+            <div class="social-icons">
+                <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            </div>
         </div>
         <div class="copyright">
             &copy; 2025 Sai Cabs Tours & Travels. All Rights Reserved.
