--- a/index.html
+++ b/index.html
@@ -190,13 +190,11 @@
                 <img src="images/company-logo.png" alt="Sai Cabs Logo" width="160">
             </div>
             <div class="contact-info">
-                <p>27, old police line, Rameswaram, Tamil Nadu 623526</p>
+                <p>27, old police line,<br> Rameswaram,<br> Tamil Nadu - 623526</p>
+            </div>
+            <div class="contact-info">
                 <p><a href="tel:+917708957128">+91 77089 57128</a></p>
                 <p><a href="mailto:info@saicabs.com">info@saicabs.com</a></p>
-            </div>
-            <div class="social-icons">
-                <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
         <div class="copyright">
